// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite > v4-vite-plugin > css 1`] = `
"view,text,::after,::before {
    border: 0 solid;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    --tw-gradient-position: initial;
    --tw-gradient-from: #0000;
    --tw-gradient-to: #0000;
    --tw-gradient-stops: initial;
    --tw-gradient-from-position: 0%;
    --tw-gradient-to-position: 100%;
    --tw-content: "";
  }
:host,page,.tw-root,wx-root-portal-content {
    --font-sans: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
    'Noto Color Emoji';
    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
    monospace;
    --color-green-400: rgb(5, 223, 114);
    --color-sky-400: rgb(0, 187, 253);
    --default-font-family: var(--font-sans);
    --default-mono-font-family: var(--font-mono);
}
.bg-_b_h123456_B {
    background-color: #123456;
  }
.bg-gradient-to-r {
    --tw-gradient-position: to right;
    background-image: linear-gradient(var(--tw-gradient-stops));
  }
.from-green-400 {
    --tw-gradient-from: var(--color-green-400);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position)), var(--tw-gradient-from) var(--tw-gradient-from-position, ), var(--tw-gradient-to) var(--tw-gradient-to-position, );
  }
.to-sky-400 {
    --tw-gradient-to: var(--color-sky-400);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position)), var(--tw-gradient-from) var(--tw-gradient-from-position, ), var(--tw-gradient-to) var(--tw-gradient-to-position, );
  }
.bg-clip-text {
    -webkit-background-clip: text;
            background-clip: text;
  }
.text-_b_h123456_B {
    color: #123456;
  }
.text-transparent {
    color: transparent;
  }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::-webkit-details-marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::-webkit-details-marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::-webkit-details-marker {
        text-overflow: clip;
      }
"
`;

exports[`vite > v4-vite-plugin > js 1`] = `
"(function polyfill() {
  const relList = document.createElement("link").relList;
  if (relList && relList.supports && relList.supports("modulepreload")) return;
  for (const link of document.querySelectorAll('link[rel="modulepreload"]')) processPreload(link);
  new MutationObserver((mutations) => {
    for (const mutation of mutations) {
      if (mutation.type !== "childList") continue;
      for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
    }
  }).observe(document, {
    childList: true,
    subtree: true
  });
  function getFetchOpts(link) {
    const fetchOpts = {};
    if (link.integrity) fetchOpts.integrity = link.integrity;
    if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
    if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
    else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
    else fetchOpts.credentials = "same-origin";
    return fetchOpts;
  }
  function processPreload(link) {
    if (link.ep) return;
    link.ep = true;
    const fetchOpts = getFetchOpts(link);
    fetch(link.href, fetchOpts);
  }
})();
console.log("bg-_b_h123456_B text-_b_h123456_B first-letter_cmarker_ctext-clip");
"
`;

exports[`vite > v4-vite-postcss > css 1`] = `
"view,text,::after,::before {
    border: 0 solid;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    --tw-content: "";
  }
:host,page,.tw-root,wx-root-portal-content {
    --font-sans: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
    'Noto Color Emoji';
    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
    monospace;
    --default-font-family: var(--font-sans);
    --default-mono-font-family: var(--font-mono);
}
.bg-_b_h123456_B {
    background-color: #123456;
  }
.text-_b_h123456_B {
    color: #123456;
  }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::-webkit-details-marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::-webkit-details-marker {
        text-overflow: clip;
      }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::-webkit-details-marker {
        text-overflow: clip;
      }
"
`;

exports[`vite > v4-vite-postcss > js 1`] = `
"(function polyfill() {
  const relList = document.createElement("link").relList;
  if (relList && relList.supports && relList.supports("modulepreload")) return;
  for (const link of document.querySelectorAll('link[rel="modulepreload"]')) processPreload(link);
  new MutationObserver((mutations) => {
    for (const mutation of mutations) {
      if (mutation.type !== "childList") continue;
      for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
    }
  }).observe(document, {
    childList: true,
    subtree: true
  });
  function getFetchOpts(link) {
    const fetchOpts = {};
    if (link.integrity) fetchOpts.integrity = link.integrity;
    if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
    if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
    else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
    else fetchOpts.credentials = "same-origin";
    return fetchOpts;
  }
  function processPreload(link) {
    if (link.ep) return;
    link.ep = true;
    const fetchOpts = getFetchOpts(link);
    fetch(link.href, fetchOpts);
  }
})();
console.log("bg-_b_h123456_B text-_b_h123456_B");
"
`;
